# infraweave

./: .gitignore  Cargo.toml  Makefile
.github/: vars.example.json
.github/ci-docs/: README.md  run-bin-scripts.sh  run-calculate-version.sh  run-release-generate-notes.sh  run-wheels-scripts.sh
.github/ci-docs/data/: binaries.example.json  docker_image_mirror.example.json  docker_images.example.json  python_wheels.example.json  release_registries.example.json  targets.example.json
.github/scripts/: bin_setup-build-matrix.sh  bin_validate-targets.sh  calculate-version.sh  cargo-deny2md.sh  release_generate-notes.sh  wheels_setup-build-matrix.sh  wheels_validate-targets.sh
.github/scripts_test/: github_wrapper.sh  test_cargo-deny2md.sh  test_wheels_setup-build-matrix.sh  test_wheels_validate-targets.sh
.github/vars/: default.python_wheels.json
.github/workflows/: bin.yml  binaries.yml  calculate-version.yml  cargo_deny.yml  clean-cache.yml  docker-runner-bake.yml  docker.yml  image_mirror.yml  main.yml  mirror-docker-images.yml  pypi.yml  python-linux.yml  python-maturin.yml  python.yml  python_maturin_action.yml  release.yml  terraform-runner-aarch64-build.yml  test.yml  tests.yaml  wheels.yml
cli/: Cargo.toml  Dockerfile  bake.hcl
cli/src/: main.rs
cli/src/commands/: admin.rs  deployment.rs  gitops.rs  mcp.rs  module.rs  stack.rs  upgrade.rs
cli/src/tui/: app.rs  background.rs  handlers.rs  utils.rs
cli/src/tui/events/: events_handler.rs
cli/src/tui/renderers/: common.rs  detail_renderer.rs  events_renderer.rs
cli/src/tui/state/: claim_builder_state.rs  detail_state.rs  events_state.rs
cli/src/tui/widgets/: claim_builder.rs  navigation.rs
crd-templator/: Cargo.toml
defs/: Cargo.toml
defs/src/: resource_change.rs  tfprovider.rs
docker/: Dockerfile.alpine-builder  Dockerfile.bookworm-builder
env_aws/: Cargo.toml
env_aws/src/: job_id.rs
env_azure/: Cargo.toml
env_common/: Cargo.toml
env_common/src/interface/: cloud_handlers.rs
env_common/src/logic/: api_infra.rs  api_module.rs  api_oci_registry.rs  api_provider.rs  api_stack.rs  tf_input_resolver.rs  tf_provider_mgmt.rs  tf_root_module.rs
gitops/: Cargo.toml  Dockerfile.generic  Dockerfile.lambda  bake.hcl
gitops/src/: diff.rs  git_utils.rs  github.rs  gitops.rs  main.rs  project.rs
infraweave-mcp/: Cargo.toml
infraweave-mcp/src/: main.rs
infraweave_py/: Cargo.toml  pyproject.toml
infraweave_py/src/: deployment.rs  python.rs  utils.rs
integration-tests/: Cargo.toml
integration-tests/tests/: infra.rs  module.rs  operator.rs  provider.rs  runner.rs  runner_oci.rs  stack.rs  utils.rs
operator/: Cargo.toml  Dockerfile  bake.hcl
operator/src/: operator.rs  validation.rs
prometheus_exporter/: Cargo.toml  Dockerfile  bake.hcl
prometheus_exporter/src/: endpoint.rs  main.rs
reconciler/: Cargo.toml  Dockerfile.generic  Dockerfile.lambda  bake.hcl
terraform_runner/: Cargo.toml  Dockerfile.opa  Dockerfile.runner  Dockerfile.terraform  Dockerfile.tofu  bake.hcl
terraform_runner/src/: module.rs  opa.rs  runner.rs
utils/: Cargo.toml
utils/src/: deployment.rs  file.rs  general.rs  log.rs  module.rs  oci.rs  provider_util.rs  terraform.rs
webserver-openapi/: Cargo.toml  Dockerfile  bake.hcl
webserver-openapi/src/: auth.rs  server.rs
