[workspace]
resolver = "2"
members = [
    "cli",
    "crd-templator",
    "defs",
    "env_aws",
    "env_azure",
    "env_common",
    "gitops",
    "infraweave_py",
    "infraweave-mcp",
    "operator",
    "prometheus_exporter",
    "reconciler",
    "terraform_runner",
    "utils",
    "webserver-openapi",
    "integration-tests",
]

[workspace.lints.rust]
warnings = "deny"