[package]
name = "cli"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"
build = "build.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
reqwest = { workspace = true }
tokio = { workspace = true }
colored = "2.0"
prettytable = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
ring = "0.17.12"
openssl = { workspace = true }
hostname = "0.4"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"
self_update = "0.42"
semver = "1.0"
dirs = { workspace = true }
inquire = "0.9"

# MCP server dependencies
rmcp-openapi = "0.20"
rmcp = "0.8"
url = "2.5"
utoipa = { workspace = true }
rand = { workspace = true }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
webserver-openapi = { path = "../webserver-openapi" }
gitops = { path = "../gitops" }
