[package]
name = "crd_templator"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tera = "1.15.0"
tokio = { version = "1", features = ["full"] }
serde_json = "*"

env_defs = { path = "../defs" }

[lib]
name = "crd_templator"
path = "src/lib.rs"
