[package]
name = "crd_templator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tera = "1.15.0"
tokio = { workspace = true }
serde_json = { workspace = true }

env_defs = { path = "../defs" }

[lib]
name = "crd_templator"
path = "src/lib.rs"
