[package]
name = "env_defs"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
walkdir = "2.3"
thiserror = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"], optional = true }

[features]
default = []
openapi = ["utoipa"]
