[package]
name = "env_aws"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = "1.60.0"
aws-sdk-ssm = { workspace = true }
aws-sdk-sts = "1.51.0"
aws-sdk-s3 = "1.65.0"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
zip = "0.6.6"
reqwest = { workspace = true }
tempfile = "3.10.1"
rand = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
hcl-rs = { workspace = true }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }
