[package]
name = "env_azure"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
azure_identity = "0.21"
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
