[package]
name = "env_common"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
hcl-rs = { workspace = true }
regex = { workspace = true }
once_cell = "1.20.2"
humantime = "2.1"
thiserror = { workspace = true }
rustls = { workspace = true }
indexmap = "2.7.0"
oci-client = "0.15.0"
reqwest = { workspace = true }

env_aws = { path = "../env_aws" }
env_azure = { path = "../env_azure" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }
