[package]
name = "infraweave-mcp"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
rmcp-openapi = "0.20"
rmcp = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
url = "2.5"
utoipa = "5.3.1"
webserver-openapi = { path = "../webserver-openapi", default-features = false }
rand = "0.8"
