[package]
name = "infraweave-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rmcp-openapi = "0.20"
rmcp = "0.8"
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
url = "2.5"
utoipa = { workspace = true }
webserver-openapi = { path = "../webserver-openapi", default-features = false }
rand = { workspace = true }
