[package]
name = "infraweave_py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"
pyo3 = { version = "0.24.1", features = ["extension-module"] }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "infraweave"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
module-name = "infraweave"

[features]
default = []
with_py = []