[package]
name = "infraweave_py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
openssl = { workspace = true }
futures = { workspace = true }
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
name = "infraweave"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
module-name = "infraweave"

[features]
default = []
with_py = []