[build-system]
requires = ["maturin==1.10.2"]
build-backend = "maturin"

[project]
name = "infraweave"
dynamic = ["version"]
description = "Interact with InfraWeave using Python"
readme = "README.md"
authors = [
    {name = "InfraWeave Team", email = "opensource@infraweave.com"}
]
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
]

[tool.setuptools]
packages = ["infraweave"]

[tool.maturin]
features = ["with_py"]

[project.urls]
Homepage = "https://preview.infraweave.io"
Documentation = "https://infraweave-io.github.io/infraweave/infraweave.html"