[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde_yaml = "0.8"
hcl-rs = "0.18.4"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"

env_defs = { path = "../defs" }
env_aws = { path = "../env_aws" }
env_common = { path = "../env_common" }
terraform_runner = { path = "../terraform_runner" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.8"
testcontainers = { version = "0.23.1",  features = ["blocking"] }
testcontainers-modules = { version = "0.11.4", features = ["dynamodb", "k3s"] }
env_utils = { path = "../utils" }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_31"] }
kube-runtime = "0.96.0"
rustls = "0.23.18"
dirs = "4.0"
operator = { path = "../operator" }
base64 = "0.22"
axum = "0.8.1"
tower = "0.5"
