[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
hcl-rs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

env_defs = { path = "../defs" }
env_aws = { path = "../env_aws" }
env_common = { path = "../env_common" }
terraform_runner = { path = "../terraform_runner" }

[dev-dependencies]
pretty_assertions = { workspace = true }
rand = { workspace = true }
testcontainers = { version = "0.23.1",  features = ["blocking"] }
testcontainers-modules = { version = "0.11.4", features = ["dynamodb", "k3s"] }
env_utils = { path = "../utils" }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_31"] }
kube-runtime = "0.96.0"
rustls = { workspace = true }
dirs = { workspace = true }
operator = { path = "../operator" }
base64 = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
