[package]
name = "operator"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_31"] }
kube-runtime = "0.96.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
futures = "0.3"
schemars = "0.8"
log = "0.4"
fern = "0.6"
anyhow = "1.0"
chrono = "0.4.31"
base64 = "0.22"
openssl = { version = "0.10.72", features = ["vendored"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
kube-leader-election = "0.37.0"
axum = "0.8.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }

crd_templator = { path = "../crd-templator" }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }
env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tower = "0.5"
