[package]
name = "operator"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_31"] }
kube-runtime = "0.96.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
schemars = "0.8"
log = { workspace = true }
fern = "0.6"
anyhow = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
openssl = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
kube-leader-election = "0.37.0"
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }

crd_templator = { path = "../crd-templator" }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }
env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tower = { workspace = true }
