[package]
name = "prometheus_exporter"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
lambda_runtime = "0.13.0"
futures = "0.3.31"
prometheus = "0.13"
axum = "0.6"

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[lib]
name = "prometheus_exporter"
path = "src/lib.rs"
