[package]
name = "prometheus_exporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
openssl = { workspace = true }
lambda_runtime = "0.13.0"
futures = { workspace = true }
prometheus = "0.14"
axum = { workspace = true }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[lib]
name = "prometheus_exporter"
path = "src/lib.rs"
