[package]
name = "reconciler"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
openssl = { workspace = true }
lambda_runtime = "0.13.0"
futures = { workspace = true }

[lib]
name = "reconciler"
path = "src/lib.rs"
