[package]
name = "terraform_runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tera = "1.15.0"
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
nanoid = "0.4.0"
convert_case = "0.6.0"
reqwest = { workspace = true }
openssl = { workspace = true }
futures = { workspace = true }

env_common = { path = "../env_common" }
env_aws = { path = "../env_aws" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[lib]
name = "terraform_runner"
path = "src/lib.rs"