[package]
name = "env_utils"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
zip = "0.6.6"
walkdir = "2.3"
hcl-rs = "0.18.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
jsonschema = "0.16"
serde_yaml = "0.8"
semver = "1.0"
chrono = "0.4"
regex = "1.11.0"
heck = "0.5"
fern = "0.6"
log = "0.4"
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
oci-distribution = "0.11.0"
sigstore = "0.12.0"
base64 = "0.22"
regorus = "0.4.0"
tempfile = "3.22.0"
bollard = "0.17.1"
uuid = "1.17"
futures-util = "0"
tokio = "1"
tokio-util = "0.7.16"
bytes = "1.10.1"

env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
