[package]
name = "env_utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
zip = "0.6.6"
walkdir = "2.3"
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
jsonschema = "0.16"
serde_yaml = { workspace = true }
semver = "1.0"
chrono = { workspace = true }
regex = { workspace = true }
heck = "0.5"
fern = "0.6"
log = { workspace = true }
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
oci-distribution = "0.11.0"
sigstore = "0.12.0"
base64 = { workspace = true }
regorus = "0.4.0"
tempfile = "3.22.0"
bollard = "0.17.1"
uuid = "1.17"
futures-util = "0"
tokio = { workspace = true }
tokio-util = "0.7.16"
bytes = "1.10.1"

env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
