[package]
name = "webserver-openapi"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[lints]
workspace = true

[lib]
name = "webserver_openapi"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-macros = "0.5.0"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { workspace = true }
tower = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"], optional = true }
utoipa-redoc = { version = "6.0.0", features = ["axum"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
openssl = { workspace = true }
rustls = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
chrono = { workspace = true }

env_defs = { path = "../defs", features = ["openapi"] }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }

[features]
default = []
ui = ["utoipa-swagger-ui", "utoipa-redoc"]
